tv/bazarr-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: tv
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://auth.mdapi.ch/tv/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-tv.oauth2-proxy.svc.cluster.local/tv/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-body-size: '16m'
spec:
  ingressClassName: nginx
  rules:
    - host: bazarr.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: bazarr
                port:
                  number: 6767
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - bazarr.mdapi.ch
      secretName: bazarr-cert
